--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         tools:targetApi="31">
         <activity
             android:name=".SocialMediaActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
         <activity
             android:name=".LoginActivity"
             android:exported="true"
@@ -29,8 +30,7 @@
         </activity>
         <activity
             android:name=".SignUp"
-            android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
